--- a/src/HikeFramework/HikeFramework.csproj
+++ b/src/HikeFramework/HikeFramework.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1386191b-6915-47f5-b46f-02092abbf413}</ProjectGuid>
+    <ProjectGuid>{1386191B-6915-47F5-B46F-02092ABBF413}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HikeFramework</RootNamespace>
@@ -107,8 +107,30 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Common\HKCoreObject.cs" />
+    <Compile Include="Components\HKComponent.cs" />
+    <Compile Include="Components\HKGameObject.cs" />
+    <Compile Include="Components\HKIComponent.cs" />
+    <Compile Include="Core\HKWindow.cs" />
+    <Compile Include="Core\IHKWindow.cs" />
+    <Compile Include="Exceptions\HKException.cs" />
+    <Compile Include="Extensions\HKStringExtensions.cs" />
+    <Compile Include="Graphics\HKShaderProgram.cs" />
+    <Compile Include="Graphics\HKShaderType.cs" />
+    <Compile Include="Graphics\IHKShaderProgram.cs" />
+    <Compile Include="HKGame.cs" />
+    <Compile Include="HKGame2D.cs" />
+    <Compile Include="HKRenderPipeline.cs" />
+    <Compile Include="HKResourceManager.cs" />
+    <Compile Include="IO\HKFileStream.cs" />
+    <Compile Include="IO\IHKFileStream.cs" />
+    <Compile Include="Platform\HKPlatformSystem.cs" />
+    <Compile Include="Platform\IHKPlatformFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\HKResource.cs" />
+    <Compile Include="Resources\HKShaderResource.cs" />
+    <Compile Include="Resources\IHKResource.cs" />
+    <Compile Include="Utils\HKMap.cs" />
     <EmbeddedResource Include="Properties\HikeFramework.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
