Canvas and GameTime objects

--- a/src/HikeFramework.Win2D/HikeFramework.Win2D.csproj
+++ b/src/HikeFramework.Win2D/HikeFramework.Win2D.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Graphics\HKWin2DCanvas.cs" />
     <Compile Include="HKPage.cs" />
     <Compile Include="Platform\HKWin2DPlatformFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,6 +119,7 @@
       <Name>HikeFramework</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
