Initials steps on getting base game class using GraphicsDevice from MonoGame and use Universal Windows app SwapChainPanel control

--- a/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
+++ b/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
@@ -23,7 +23,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETFX_CORE;WINDOWS_UWP;WINDOWS_UAP;WINRT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -107,7 +107,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="HKGame.UniversalWindows.cs" />
+    <Compile Include="HKGame.cs" />
+    <Compile Include="tmp\HKGame.Monogame.cs" />
+    <Compile Include="tmp\HKGamePlataform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Hike.Framework.WindowsUniversal.rd.xml" />
   </ItemGroup>
