Some more tests

--- a/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
+++ b/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Graphics\HKViewport.cs" />
     <Compile Include="HKGame.UniversalWindows.cs" />
     <Compile Include="HKGame.cs" />
+    <Compile Include="System\HKGameTime.cs" />
     <Compile Include="tmp\HKGame.Monogame.cs" />
     <Compile Include="tmp\HKGamePlataform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
