HKGame bases using Monogame game. Window beng initialized and graphic device working.

--- a/src/GrandPrix.Game.WindowsUniversal/GrandPrix.Game.WindowsUniversal.csproj
+++ b/src/GrandPrix.Game.WindowsUniversal/GrandPrix.Game.WindowsUniversal.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3f96a5d2-c0e2-401e-991f-007f6c3723cb}</ProjectGuid>
+    <ProjectGuid>{3F96A5D2-C0E2-401E-991F-007F6C3723CB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GrandPrix.Game.WindowsUniversal</RootNamespace>
@@ -107,9 +107,15 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="GrandPrixGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\GrandPrix.Game.WindowsUniversal.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hike.Framework.WindowsUniversal\Hike.Framework.WindowsUniversal.csproj">
+      <Project>{a78d8fd6-5447-40f0-9428-8a351e8070e6}</Project>
+      <Name>Hike.Framework.WindowsUniversal</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
