--- a/src/GrandPrix.UniversalWindows/GrandPrix.UniversalWindows.csproj
+++ b/src/GrandPrix.UniversalWindows/GrandPrix.UniversalWindows.csproj
@@ -127,6 +127,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsUniversal.csproj">
+      <Project>{09c41a48-7bf3-4a46-9eb8-ce95b4c27ca9}</Project>
+      <Name>MonoGame.Framework.WindowsUniversal</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GrandPrix.Game.WindowsUniversal\GrandPrix.Game.WindowsUniversal.csproj">
       <Project>{3f96a5d2-c0e2-401e-991f-007f6c3723cb}</Project>
       <Name>GrandPrix.Game.WindowsUniversal</Name>
