--- a/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
+++ b/src/Hike.Framework.WindowsUniversal/Hike.Framework.WindowsUniversal.csproj
@@ -108,8 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Graphics\HKViewport.cs" />
-    <Compile Include="HKGame.UniversalWindows.cs" />
     <Compile Include="HKGame.cs" />
+    <Compile Include="Platform\HKGameXna.cs" />
+    <Compile Include="Platform\UniversalWindows\HKGameUniversalWindows.cs" />
     <Compile Include="System\HKGameTime.cs" />
     <Compile Include="tmp\HKGame.Monogame.cs" />
     <Compile Include="tmp\HKGamePlataform.cs" />
